[tool.poetry]
name = "change-streams"
version = "0.1.0"
description = "A simple key-value store with versioning and HTTP API"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "change_streams", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.8.1"
fastapi = "0.104.1"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.12.0"
isort = "^5.13.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 